--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     
     <!-- Favicon and App Icons -->
     <link rel="icon" type="image/x-icon" href="/logo.ico">
+    <link rel="icon" type="image/png" href="/logo.png">
     <link rel="icon" type="image/svg+xml" href="/logo.svg">
     <link rel="apple-touch-icon" href="/logo.png">
+    <link rel="shortcut icon" href="/logo.ico">
     
     <!-- Meta Tags -->
     <meta name="description" content="Professional technical solutions for enterprise digital transformation">
