--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <meta name="theme-color" content="#FBBF24">
     
     <link href="main.css" rel="stylesheet">
+
+    <!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-NC975VN2');</script>
+    <!-- End Google Tag Manager -->
+
   </head>
   <script>
     new EventSource('/esbuild').addEventListener('change', () =>
@@ -26,5 +35,10 @@
   <body>
     <div id="app"></div>
     <script src="main.js"></script>
+
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NC975VN2"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
   </body>
 </html>
