--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-NC975VN2');</script>
-    <!-- End Google Tag Manager -->
+})(window,document,'script','dataLayer','GTM-N9CFFV8S');</script>
+<!-- End Google Tag Manager -->
 
   </head>
   <script>
@@ -37,9 +37,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <script src="main.js"></script>
 
     <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NC975VN2"
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-N9CFFV8S"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-    <!-- End Google Tag Manager (noscript) -->
+<!-- End Google Tag Manager (noscript) -->
      <!-- 表单提交监听start -->
 <script>
   window.addEventListener('message', function(event) {
